--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -37,7 +37,7 @@ on:
 
 env:
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config_mini
+  CONFIG_FILE: config_small
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
