--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -74,7 +74,7 @@ jobs:
         if [ ${{ inputs.source }} == 'openwrt' ]; then
           git clone --depth=1 https://github.com/lkiuyu/openwrt-ufi openwrt
         elif [ ${{ inputs.source }} == 'immortalwrt' ]; then
-          git clone --depth=1 https://github.com/xuxin1955/immortalwrt master
+          git clone --depth=1 https://github.com/xuxin1955/immortalwrt openwrt
         else
           git clone --depth=1 -b msm8916 --single-branch https://github.com/feryw/immortalwrt openwrt
         fi
